--- a/.github/workflows/review-workflow.yml
+++ b/.github/workflows/review-workflow.yml
@@ -1,12 +1,8 @@
 name: CI
-
 on: [push]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Run a one-line script
@@ -15,3 +11,13 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+  publish_confluence:
+    runs-on: ubuntu-latest
+    name: Publish docs to confluence
+    steps:
+    - uses: actions/checkout@v2.0.0
+    - name: publish to confluence
+      uses: pratikmallya/publish-confluence@master
+      with:
+        username: ${{ secrets.atlassianUsername }}
+        apitoken: ${{ secrets.atlassianApitoken }}
