--- a/.github/workflows/review-workflow.yml
+++ b/.github/workflows/review-workflow.yml
@@ -1,18 +1,15 @@
-name: CI
 on: [push]
 jobs:
-  build:
+  publish_confluence:
     runs-on: ubuntu-latest
+    name: Publish docs to confluence
     steps:
-    - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
-    - name: publish-confluence
-      uses: pratikmallya/publish-confluence@v1.0
+    - uses: actions/checkout@v1
+    - uses: actions/setup-python@v1  # Only required if you have multiple python deps
+      with:
+        python-version: '3.x'
+    - name: publish to confluence
+      uses: pratikmallya/publish-confluence@master
       with:
         username: ${{ secrets.atlassianUsername }}
         apitoken: ${{ secrets.atlassianApitoken }}
